{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 50,
  "lineage": "4195b208-83e2-6b58-bf76-a1bcdadb7ec6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d23f1d1908bdbfb",
            "arn": "arn:aws:ec2:us-east-1:903537644284:elastic-ip/eipalloc-07d23f1d1908bdbfb",
            "association_id": "eipassoc-02effe3c4e1b103c9",
            "domain": "vpc",
            "id": "eipalloc-07d23f1d1908bdbfb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e454e40871a4bf94",
            "private_dns": "ip-10-0-1-245.ec2.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-44-193-192-133.compute-1.amazonaws.com",
            "public_ip": "44.193.192.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:internet-gateway/igw-0be5ec5197a394d06",
            "id": "igw-0be5ec5197a394d06",
            "owner_id": "903537644284",
            "tags": {
              "Name": "aws-3tier-app-igw"
            },
            "tags_all": {
              "Name": "aws-3tier-app-igw"
            },
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903537644284:loadbalancer/app/aws-3tier-app-alb/8e3425da4ca67886",
            "arn_suffix": "app/aws-3tier-app-alb/8e3425da4ca67886",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-3tier-app-alb-637296993.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:903537644284:loadbalancer/app/aws-3tier-app-alb/8e3425da4ca67886",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-3tier-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0217104dfe2b438be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7836522cd8f0747"
              },
              {
                "subnet_id": "subnet-0b6977f82038eb218"
              }
            ],
            "subnets": [
              "subnet-0a7836522cd8f0747",
              "subnet-0b6977f82038eb218"
            ],
            "tags": {
              "Name": "aws-3tier-app-alb"
            },
            "tags_all": {
              "Name": "aws-3tier-app-alb"
            },
            "vpc_id": "vpc-08619eba919b3f18d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903537644284:listener/app/aws-3tier-app-alb/8e3425da4ca67886/a422930bfb3903c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:903537644284:targetgroup/aws-3tier-app-tg/d552877eab5fc3c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903537644284:listener/app/aws-3tier-app-alb/8e3425da4ca67886/a422930bfb3903c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:903537644284:loadbalancer/app/aws-3tier-app-alb/8e3425da4ca67886",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903537644284:targetgroup/aws-3tier-app-tg/d552877eab5fc3c4",
            "arn_suffix": "targetgroup/aws-3tier-app-tg/d552877eab5fc3c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903537644284:targetgroup/aws-3tier-app-tg/d552877eab5fc3c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:903537644284:loadbalancer/app/aws-3tier-app-alb/8e3425da4ca67886"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-3tier-app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d23f1d1908bdbfb",
            "association_id": "eipassoc-02effe3c4e1b103c9",
            "connectivity_type": "public",
            "id": "nat-0219d7d7b16141532",
            "network_interface_id": "eni-0e454e40871a4bf94",
            "private_ip": "10.0.1.245",
            "public_ip": "44.193.192.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7836522cd8f0747",
            "tags": {
              "Name": "aws-3tier-app-nat"
            },
            "tags_all": {
              "Name": "aws-3tier-app-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:route-table/rtb-06818e2cfc041798a",
            "id": "rtb-06818e2cfc041798a",
            "owner_id": "903537644284",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0219d7d7b16141532",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-3tier-app-private-rt"
            },
            "tags_all": {
              "Name": "aws-3tier-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:route-table/rtb-0c67e80f973c5b990",
            "id": "rtb-0c67e80f973c5b990",
            "owner_id": "903537644284",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be5ec5197a394d06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-3tier-app-public-rt"
            },
            "tags_all": {
              "Name": "aws-3tier-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dad88b6bcc4d388",
            "route_table_id": "rtb-06818e2cfc041798a",
            "subnet_id": "subnet-06b1d1e0d2b8b18b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f45fd8f23c736a59",
            "route_table_id": "rtb-06818e2cfc041798a",
            "subnet_id": "subnet-0214798185207b4ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01461673261070e67",
            "route_table_id": "rtb-0c67e80f973c5b990",
            "subnet_id": "subnet-0a7836522cd8f0747"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d137d10655bef6ac",
            "route_table_id": "rtb-0c67e80f973c5b990",
            "subnet_id": "subnet-0b6977f82038eb218"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:security-group/sg-0217104dfe2b438be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0217104dfe2b438be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-3tier-app-alb-sg",
            "name_prefix": "",
            "owner_id": "903537644284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-3tier-app-alb-sg"
            },
            "tags_all": {
              "Name": "aws-3tier-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:security-group/sg-000df268d34b05df5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000df268d34b05df5",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.212.63.248/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0217104dfe2b438be"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "aws-3tier-app-ec2-sg",
            "name_prefix": "",
            "owner_id": "903537644284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-3tier-app-ec2-sg"
            },
            "tags_all": {
              "Name": "aws-3tier-app-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:security-group/sg-0559686a2a731eac3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0559686a2a731eac3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000df268d34b05df5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aws-3tier-app-rds-sg",
            "name_prefix": "",
            "owner_id": "903537644284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-3tier-app-rds-sg"
            },
            "tags_all": {
              "Name": "aws-3tier-app-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:subnet/subnet-06b1d1e0d2b8b18b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b1d1e0d2b8b18b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903537644284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-3tier-app-private-1"
            },
            "tags_all": {
              "Name": "aws-3tier-app-private-1"
            },
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:subnet/subnet-0214798185207b4ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0214798185207b4ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903537644284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-3tier-app-private-2"
            },
            "tags_all": {
              "Name": "aws-3tier-app-private-2"
            },
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:subnet/subnet-0a7836522cd8f0747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7836522cd8f0747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "903537644284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-3tier-app-public-1"
            },
            "tags_all": {
              "Name": "aws-3tier-app-public-1"
            },
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:subnet/subnet-0b6977f82038eb218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6977f82038eb218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "903537644284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-3tier-app-public-2"
            },
            "tags_all": {
              "Name": "aws-3tier-app-public-2"
            },
            "vpc_id": "vpc-08619eba919b3f18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903537644284:vpc/vpc-08619eba919b3f18d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07dfa788ed7de291a",
            "default_route_table_id": "rtb-06b64970ef4ce7c2e",
            "default_security_group_id": "sg-05fab3213c861adaf",
            "dhcp_options_id": "dopt-0651528aa55e0c06d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08619eba919b3f18d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b64970ef4ce7c2e",
            "owner_id": "903537644284",
            "tags": {
              "Name": "aws-3tier-app-vpc"
            },
            "tags_all": {
              "Name": "aws-3tier-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}